--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css"
+        integrity="sha512-RntatPOhEcQEA81gC/esYoCkGkL7AYV7TeTPoU+R9zE44/yWxVvLIBfBSaMu78rhoDd73ZeRHXRJN5+aPEK53Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Background blur by password</title>
 </head>
 
 <body>
+    <div class="background"></div>
+    <div class="bg-white rounded p-10 text-center shadow-md">
+        <h1 class="text-3xl">Image password strength</h1>
+        <p class="text-sm text-gray-700">Change password to trigger effect</p>
+        <div class="my-4 text-left">
+            <label for="email" class="text-gray-900">Email</label>
+            <input type="text" class="border block w-full p-2 mt-2 rounded" id="email" placeholder="Enter email ...">
+        </div>
+        <div class="my-4 text-left">
+            <label for="email" class="text-gray-900">Password:</label>
+            <input type="password" class="border block w-full p-2 mt-2 rounded" id="password"
+                placeholder="Enter Password ...">
+        </div>
+        <button class="bg-black text-white py-3 mt-4 inline-block w-full rounded">Submit</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
