--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css"
         integrity="sha512-RntatPOhEcQEA81gC/esYoCkGkL7AYV7TeTPoU+R9zE44/yWxVvLIBfBSaMu78rhoDd73ZeRHXRJN5+aPEK53Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +13,7 @@
 </head>
 
 <body>
-    <div class="background"></div>
+    <div class="background" id="background"></div>
     <div class="bg-white rounded p-10 text-center shadow-md">
         <h1 class="text-3xl">Image password strength</h1>
         <p class="text-sm text-gray-700">Change password to trigger effect</p>
